# breezy-desktop

./: .gitignore  ANDROID_RASPBERRY_CLIENT_OPTIONS.md  BREEZY_X11_TECHNICAL.md  DMA_BUF_PERFORMANCE_ANALYSIS.md  DOCUMENTATION_CONSOLIDATION.md  DRM_DEVICE_CREATION_CLARIFICATION.md  DRM_DEVICE_SECURITY.md  EGL_IMAGE_REUSE_ANALYSIS.md  FRAMEBUFFER_CHANGE_HANDLING.md  JS_CODE_REUSE_ANALYSIS.md  KMS_CONNECTOR_AND_FB_ID_OPTIONS.md  KMS_CONNECTOR_EXPLANATION.md  LANGUAGE_CHOICE_ANALYSIS.md  README.md  REMOTE_STREAMING_CODEC_ANALYSIS.md  SHARED_MATH_LIBRARY_IMPLEMENTATION.md  STEROSCOPIC_DEPTH_CONVERSION_FEASIBILITY.md  VIRTUAL_DESKTOP_SIZE_AND_FOLLOW_FEATURES.md  VIRTUAL_FRAMEBUFFER_CLARIFICATION.md  X11LIBRE_VIRTUAL_DISPLAY_ANALYSIS.md  XORG_IMPLEMENTATION_STATUS.md  XORG_VIRTUAL_XR_API.md  XORG_XR_IMPLEMENTATION_STATUS.md  XSPICE_QXL_ANALYSIS.md  XVFB_WHY_SEPARATE_ANALYSIS.md  adapt_breezy_desktop_for_xfce4_with_3d_rendering.plan.md  doc_xfce4_xorg_xr_connector_design.md  rebuild-ui.sh  xfce4_ar_support_via_xorg_virtual_xr_connector.plan.md
future-ideas/: WEBCAM_HEAD_TRACKING.md
gnome/src/: metadata.json  virtualdisplayeffect.js
kwin/docker-build/: init.sh  run-build.sh
modules/: XRLinux  XRLinuxDriver
shared/math/: Makefile  breezy_math.c  breezy_math.h
ui/po/: POTFILES  POTFILES.in  breezydesktop.pot  de.po  es.po  fr.po  it.po  ja.po  meson.build  pl.po  pt_BR.po  ru.po  sv.po  uk_UA.po  update_pot_if_needed.sh  zh_CN.po
ui/po/mo/de/LC_MESSAGES/: breezydesktop.mo
ui/po/mo/es/LC_MESSAGES/: breezydesktop.mo
ui/po/mo/fr/LC_MESSAGES/: breezydesktop.mo
ui/po/mo/it/LC_MESSAGES/: breezydesktop.mo
ui/po/mo/ja/LC_MESSAGES/: breezydesktop.mo
ui/po/mo/pt_BR/LC_MESSAGES/: breezydesktop.mo
ui/po/mo/ru/LC_MESSAGES/: breezydesktop.mo
ui/po/mo/sv/LC_MESSAGES/: breezydesktop.mo
ui/po/mo/uk_UA/LC_MESSAGES/: breezydesktop.mo
ui/po/mo/zh_CN/LC_MESSAGES/: breezydesktop.mo
ui/src/: breezydesktop.gresource.xml  connecteddevice.py  extensionsmanager.py  licensefeaturerow.py  main.py  meson.build  statemanager.py  verify.py  virtualdisplay_x11.py  virtualdisplaymanager.py  window.py
x11/: README.md
x11/renderer/: .gitignore  IMPLEMENTATION_STATUS.md  Makefile  PIPEWIRE_VS_DRM.md  TESTING_GUIDE.md  breezy_x11_renderer.c  (+7 more)
xfce4/: README.md
(+32 files in other folders)
